--- a/r2/r2/templates/utils.html
+++ b/r2/r2/templates/utils.html
@@ -600,3 +600,7 @@ ${unsafe(txt)}
 <%def name="_md(text, wrap=False)">
   ${md(_(text), wrap=wrap)}
 </%def>
+
+<%def name="_mdf(text, wrap=False, **kwargs)">
+  ${md(_(text) % kwargs, wrap=wrap)}
+</%def>
