--- a/r2/r2/templates/utils/gold.html
+++ b/r2/r2/templates/utils/gold.html
@@ -20,27 +20,25 @@
 ## reddit Inc. All Rights Reserved.
 ###############################################################################
 
-<%namespace file="utils.html" import="md"/>
+<%!
+from r2.lib.strings import Score
+%>
 
-<div class="gold-wrap">
-  <h1 class="gold-banner"><a href="/gold">${_('reddit gold')}</a></h1>
-  <div class="fancy">
-    <div class="fancy-inner">
-      <div class="fancy-content">
-        <div class="container">
-          <p class="claim-message">${thing.claim_msg}
-          %if thing.vendor_url:
-            &#32;<a class="vendor-url" href="${thing.vendor_url}">${thing.vendor_url}</a>
-          %endif
-          </p>
-            
-          %if thing.lounge_md:
-            <span class="lounge-msg">
-              ${md(thing.lounge_md, wrap=True)}
-            </span>
-          %endif
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+<%def name="gold_dropdown(what, chosen_months)">
+  <%!
+    month_options = (1, 3)
+    year_options = (1, 2, 3)
+  %>
+  <select id="months" name="months" class="gold-dropdown">
+    %for i in month_options:
+       <option value="${i}" ${"selected" if chosen_months == i else ""}>
+         ${unsafe(Score.somethings(i, what))}: ${g.gold_month_price * i}
+       </option>
+    %endfor
+    %for i in year_options:
+       <option value="${i * 12}" ${"selected" if (chosen_months == (i * 12) or (not chosen_months and i == 1)) else ""}>
+         ${unsafe(Score.somethings(i * 12, what))} &#32; (special price!): ${g.gold_year_price * i}
+       </option>
+    %endfor
+  </select>
+</%def>
